# App-Fair

./: .gitignore  Cargo.toml  Day.toml  PRIVACY.md  README.md  RELEASE.md  build.rs
.github/workflows/: ci.yml
android/: proguard-rules.pro
android/fastlane/: Appfile  Fastfile  README.md  report.xml
android/fastlane/metadata/android/: keywords.txt
android/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
android/fastlane/metadata/android/en-US/changelogs/: 1.txt
android/fastlane/metadata/android/fr-FR/: full_description.txt  short_description.txt  title.txt
android/fastlane/metadata/android/fr-FR/changelogs/: 1.txt
android/java/org/appfair/app/appfair/: DayInstaller.java  UpdateWorker.java
dayscript/: ci.yaml  smoke.yaml
migrations/2026-07-01-000000_init/: down.sql  up.sql
migrations/2026-07-02-000000_store_features/: down.sql  up.sql
migrations/2026-07-03-000000_app_rank/: down.sql  up.sql
mock/: catalog.json
platform/android/: gradle.properties  settings.gradle.kts
platform/android/app/: build.gradle.kts
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
platform/android/app/src/main/res/values/: colors.xml  styles.xml
platform/ios/Assets.xcassets/: Contents.json
platform/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
platform/ios/DayApp.xcodeproj/: project.pbxproj
platform/ios/Runner/: Info.plist  main.swift
resource/locales/en/: app.ftl
resource/locales/fr/: app.ftl
src/: cache.rs  catalogs_add.rs  collate.rs  db.rs  detail.rs  fdroid.rs  icons.rs  install.rs  install_sheet.rs  lib.rs  main.rs  mock.rs  model.rs  net.rs  platform.rs  schema.rs  settings.rs  state.rs  sync.rs  ui.rs  updates.rs  util.rs
src/testdata/: diff-1000.json  entry.json  index-v2.json
